--- a/Titanic_Survival_Exploration.ipynb
+++ b/Titanic_Survival_Exploration.ipynb
@@ -759,7 +759,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: Predictions have an accuracy of 80.36%"
+    "**Answer**: \n",
+    "\n",
+    "In order to implement the final prediction model I basically looked at every possible feature (all but those that had too many values) and used Sex, Number of Siblings, Age, Fare and Pclass conditions, mostly for passengers under 10 years and between 30 and 40 years, this specific segment proved to be very consistent and informative as travellers of that age both men and women have a relatively high survival rate.\n",
+    "\n",
+    "Predictions have an accuracy of 80.36%"
    ]
   },
   {
